<resources>
  <string name="app_name">Kabaddi Kounter</string>
  <string name="label_plus_one">+1</string>
  <string name="label_plus_two">+2</string>
  <string name="label_reset">Reset</string>
  <string name="label_save">Save</string>
  <string name="label_create_match">Create Match</string>
  <string name="label_save_score">Save Score</string>
  <string name="label_finish_match">Finish Match</string>
  <string name="label_new_match">New Match</string>
  <string name="label_download">Download</string>
  <string name="label_dark_mode">Dark Mode</string>
  <string name="label_settings">Settings</string>
  <string name="label_backend_test">Backend Test</string>
  <string name="settings_title">Settings</string>
  <string name="pref_theme_title">Theme</string>
  <string name="label_delete_match">Delete match</string>
  <string name="score_format">%1$d - %2$d</string>

  <string-array name="theme_entries">
    <item>Follow System</item>
    <item>Light</item>
    <item>Dark</item>
  </string-array>

  <string-array name="theme_values">
    <item>system</item>
    <item>light</item>
    <item>dark</item>
  </string-array>
</resources>
