<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.kabaddikounter.viewModels.ScoreViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/buttonBackendTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_backend_test"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:autofillHints="teamA"
            android:enabled="@{viewModel.isNameEditable}"
            android:inputType="text"
            android:text="@={viewModel.teamA}"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonBackendTest" />

        <EditText
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints="teamB"
            android:enabled="@{viewModel.isNameEditable}"
            android:inputType="text"
            android:text="@={viewModel.teamB}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/scoreA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@{viewModel.scoreA.toString()}"
            android:textSize="34sp"
            app:layout_constraintEnd_toStartOf="@+id/scoreB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/scoreB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@{viewModel.scoreB.toString()}"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scoreA"
            app:layout_constraintTop_toTopOf="@+id/scoreA" />

        <Button
            android:id="@+id/buttonTeamA1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="@{viewModel.isScoreEditable}"
            android:onClick="@{() -> viewModel.incrementScoreA(1)}"
            android:text="@string/label_plus_one"
            app:layout_constraintEnd_toStartOf="@+id/buttonTeamB1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreA" />

        <Button
            android:id="@+id/buttonTeamB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:enabled="@{viewModel.isScoreEditable}"
            android:onClick="@{() -> viewModel.incrementScoreB(1)}"
            android:text="@string/label_plus_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonTeamA1"
            app:layout_constraintTop_toTopOf="@+id/buttonTeamA1" />

        <Button
            android:id="@+id/buttonTeamA2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="@{viewModel.isScoreEditable}"
            android:onClick="@{() -> viewModel.incrementScoreA(2)}"
            android:text="@string/label_plus_two"
            app:layout_constraintEnd_toStartOf="@+id/buttonTeamB2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTeamA1" />

        <Button
            android:id="@+id/buttonTeamB2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:enabled="@{viewModel.isScoreEditable}"
            android:onClick="@{() -> viewModel.incrementScoreB(2)}"
            android:text="@string/label_plus_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonTeamA2"
            app:layout_constraintTop_toTopOf="@+id/buttonTeamA2" />

        <Button
            android:id="@+id/buttonNewMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{() -> viewModel.startNewMatch()}"
            android:text="@string/label_new_match"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTeamA2" />

        <Button
            android:id="@+id/buttonCreateMatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="@{viewModel.isCreateEnabled}"
            android:onClick="@{() -> viewModel.createMatch()}"
            android:text="@string/label_create_match"
            app:layout_constraintEnd_toStartOf="@+id/buttonSaveScore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonNewMatch" />

        <Button
            android:id="@+id/buttonSaveScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:enabled="@{viewModel.isSaveScoreEnabled}"
            android:onClick="@{() -> viewModel.saveScore()}"
            android:text="@string/label_save_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCreateMatch"
            app:layout_constraintTop_toTopOf="@+id/buttonCreateMatch" />

        <Button
            android:id="@+id/buttonFinishMatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="@{viewModel.isFinishEnabled}"
            android:onClick="@{() -> viewModel.finishMatch()}"
            android:text="@string/label_finish_match"
            app:layout_constraintEnd_toStartOf="@+id/buttonDownload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCreateMatch" />

        <Button
            android:id="@+id/buttonDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:onClick="@{() -> viewModel.downloadHistoryAsJSON()}"
            android:text="@string/label_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonFinishMatch"
            app:layout_constraintTop_toTopOf="@+id/buttonFinishMatch" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{viewModel.teamA + ` vs ` + viewModel.teamB}"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFinishMatch" />

        <TextView
            android:id="@+id/textModeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@{viewModel.modeLabel}"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/history_fragment_container"
            android:name="com.example.kabaddikounter.HistoryFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textModeLabel"
            tools:layout="@layout/fragment_history" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
